Solutions for puzzle 1

--- a/AdventOfCode2020/AdventOfCode.Runner/AdventOfCode.Runner.csproj
+++ b/AdventOfCode2020/AdventOfCode.Runner/AdventOfCode.Runner.csproj
@@ -5,4 +5,18 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="App_Data\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AdventOfCode.Day01\AdventOfCode.Day01.fsproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="App_Data\day01.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
