Solutions for day 7

--- a/AdventOfCode.Runner/AdventOfCode.Runner.csproj
+++ b/AdventOfCode.Runner/AdventOfCode.Runner.csproj
@@ -12,6 +12,7 @@
 		<ProjectReference Include="..\AdventOfCode.Day04\AdventOfCode.Day04.fsproj" />
 		<ProjectReference Include="..\AdventOfCode.Day05\AdventOfCode.Day05.fsproj" />
     <ProjectReference Include="..\AdventOfCode.Day06\AdventOfCode.Day06.fsproj" />
+    <ProjectReference Include="..\AdventOfCode.Day07\AdventOfCode.Day07.fsproj" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -31,6 +32,9 @@
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
     <None Update="App_Data\day06.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="App_Data\day07.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
 	</ItemGroup>
