--- a/AdventOfCode.Runner/AdventOfCode.Runner.csproj
+++ b/AdventOfCode.Runner/AdventOfCode.Runner.csproj
@@ -15,6 +15,7 @@
     <ProjectReference Include="..\AdventOfCode.Day07\AdventOfCode.Day07.fsproj" />
     <ProjectReference Include="..\AdventOfCode.Day08\AdventOfCode.Day08.fsproj" />
     <ProjectReference Include="..\AdventOfCode.Day09\AdventOfCode.Day09.fsproj" />
+    <ProjectReference Include="..\AdventOfCode.Day10\AdventOfCode.Day10.fsproj" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -43,6 +44,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="App_Data\day09.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="App_Data\day10.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
 	</ItemGroup>
