Solutions for day 13

--- a/AdventOfCode.Runner/AdventOfCode.Runner.csproj
+++ b/AdventOfCode.Runner/AdventOfCode.Runner.csproj
@@ -18,6 +18,7 @@
     <ProjectReference Include="..\AdventOfCode.Day10\AdventOfCode.Day10.fsproj" />
     <ProjectReference Include="..\AdventOfCode.Day11\AdventOfCode.Day11.fsproj" />
     <ProjectReference Include="..\AdventOfCode.Day12\AdventOfCode.Day12.fsproj" />
+    <ProjectReference Include="..\AdventOfCode.Day13\AdventOfCode.Day13.fsproj" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -55,6 +56,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="App_Data\day12.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="App_Data\day13.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
 	</ItemGroup>
