Solutions for day 14

--- a/AdventOfCode.Runner/AdventOfCode.Runner.csproj
+++ b/AdventOfCode.Runner/AdventOfCode.Runner.csproj
@@ -19,6 +19,7 @@
     <ProjectReference Include="..\AdventOfCode.Day11\AdventOfCode.Day11.fsproj" />
     <ProjectReference Include="..\AdventOfCode.Day12\AdventOfCode.Day12.fsproj" />
     <ProjectReference Include="..\AdventOfCode.Day13\AdventOfCode.Day13.fsproj" />
+    <ProjectReference Include="..\AdventOfCode.Day14\AdventOfCode.Day14.fsproj" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -59,6 +60,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="App_Data\day13.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="App_Data\day14.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
 	</ItemGroup>
