--- a/AdventOfCode.Runner/AdventOfCode.Runner.csproj
+++ b/AdventOfCode.Runner/AdventOfCode.Runner.csproj
@@ -1,43 +1,43 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-	<PropertyGroup>
-		<OutputType>Exe</OutputType>
-		<TargetFramework>net5.0</TargetFramework>
-	</PropertyGroup>
+  <PropertyGroup>
+    <OutputType>Exe</OutputType>
+    <TargetFramework>net5.0</TargetFramework>
+  </PropertyGroup>
 
-	<ItemGroup>
-		<ProjectReference Include="..\AdventOfCode.Day01\AdventOfCode.Day01.fsproj" />
-		<ProjectReference Include="..\AdventOfCode.Day02\AdventOfCode.Day02.fsproj" />
-		<ProjectReference Include="..\AdventOfCode.Day03\AdventOfCode.Day03.fsproj" />
-		<ProjectReference Include="..\AdventOfCode.Day04\AdventOfCode.Day04.fsproj" />
-		<ProjectReference Include="..\AdventOfCode.Day05\AdventOfCode.Day05.fsproj" />
-    <ProjectReference Include="..\AdventOfCode.Day06\AdventOfCode.Day06.fsproj" />
-    <ProjectReference Include="..\AdventOfCode.Day07\AdventOfCode.Day07.fsproj" />
-    <ProjectReference Include="..\AdventOfCode.Day08\AdventOfCode.Day08.fsproj" />
-    <ProjectReference Include="..\AdventOfCode.Day09\AdventOfCode.Day09.fsproj" />
-    <ProjectReference Include="..\AdventOfCode.Day10\AdventOfCode.Day10.fsproj" />
-    <ProjectReference Include="..\AdventOfCode.Day11\AdventOfCode.Day11.fsproj" />
-    <ProjectReference Include="..\AdventOfCode.Day12\AdventOfCode.Day12.fsproj" />
-    <ProjectReference Include="..\AdventOfCode.Day13\AdventOfCode.Day13.fsproj" />
-    <ProjectReference Include="..\AdventOfCode.Day14\AdventOfCode.Day14.fsproj" />
-	</ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Solutions\AdventOfCode.Day01\AdventOfCode.Day01.fsproj" />
+    <ProjectReference Include="..\Solutions\AdventOfCode.Day02\AdventOfCode.Day02.fsproj" />
+    <ProjectReference Include="..\Solutions\AdventOfCode.Day03\AdventOfCode.Day03.fsproj" />
+    <ProjectReference Include="..\Solutions\AdventOfCode.Day04\AdventOfCode.Day04.fsproj" />
+    <ProjectReference Include="..\Solutions\AdventOfCode.Day05\AdventOfCode.Day05.fsproj" />
+    <ProjectReference Include="..\Solutions\AdventOfCode.Day06\AdventOfCode.Day06.fsproj" />
+    <ProjectReference Include="..\Solutions\AdventOfCode.Day07\AdventOfCode.Day07.fsproj" />
+    <ProjectReference Include="..\Solutions\AdventOfCode.Day08\AdventOfCode.Day08.fsproj" />
+    <ProjectReference Include="..\Solutions\AdventOfCode.Day09\AdventOfCode.Day09.fsproj" />
+    <ProjectReference Include="..\Solutions\AdventOfCode.Day10\AdventOfCode.Day10.fsproj" />
+    <ProjectReference Include="..\Solutions\AdventOfCode.Day11\AdventOfCode.Day11.fsproj" />
+    <ProjectReference Include="..\Solutions\AdventOfCode.Day12\AdventOfCode.Day12.fsproj" />
+    <ProjectReference Include="..\Solutions\AdventOfCode.Day13\AdventOfCode.Day13.fsproj" />
+    <ProjectReference Include="..\Solutions\AdventOfCode.Day14\AdventOfCode.Day14.fsproj" />
+  </ItemGroup>
 
-	<ItemGroup>
-		<None Update="App_Data\day01.txt">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</None>
-		<None Update="App_Data\day02.txt">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</None>
-		<None Update="App_Data\day03.txt">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</None>
-		<None Update="App_Data\day04.txt">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</None>
-		<None Update="App_Data\day05.txt">
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</None>
+  <ItemGroup>
+    <None Update="App_Data\day01.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="App_Data\day02.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="App_Data\day03.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="App_Data\day04.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="App_Data\day05.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="App_Data\day06.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -65,6 +65,6 @@
     <None Update="App_Data\day14.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-	</ItemGroup>
+  </ItemGroup>
 
 </Project>
