--- a/AdventOfCode.Runner/AdventOfCode.Runner.csproj
+++ b/AdventOfCode.Runner/AdventOfCode.Runner.csproj
@@ -24,6 +24,7 @@
     <ProjectReference Include="..\AdventOfCode.Solutions\AdventOfCode.Day16\AdventOfCode.Day16.fsproj" />
     <ProjectReference Include="..\AdventOfCode.Solutions\AdventOfCode.Day17\AdventOfCode.Day17.fsproj" />
     <ProjectReference Include="..\AdventOfCode.Solutions\AdventOfCode.Day18\AdventOfCode.Day18.fsproj" />
+    <ProjectReference Include="..\AdventOfCode.Solutions\AdventOfCode.Day19\AdventOfCode.Day19.fsproj" />
   </ItemGroup>
 
   <ItemGroup>
@@ -79,6 +80,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="App_Data\day18.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="App_Data\day19.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
