--- a/AdventOfCode.Runner/AdventOfCode.Runner.csproj
+++ b/AdventOfCode.Runner/AdventOfCode.Runner.csproj
@@ -26,6 +26,7 @@
     <ProjectReference Include="..\AdventOfCode.Solutions\AdventOfCode.Day18\AdventOfCode.Day18.fsproj" />
     <ProjectReference Include="..\AdventOfCode.Solutions\AdventOfCode.Day19\AdventOfCode.Day19.fsproj" />
     <ProjectReference Include="..\AdventOfCode.Solutions\AdventOfCode.Day20\AdventOfCode.Day20.fsproj" />
+    <ProjectReference Include="..\AdventOfCode.Solutions\AdventOfCode.Day21\AdventOfCode.Day21.fsproj" />
   </ItemGroup>
 
   <ItemGroup>
@@ -90,6 +91,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="App_Data\day20.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="App_Data\day21.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
