--- a/AdventOfCode.Runner/AdventOfCode.Runner.csproj
+++ b/AdventOfCode.Runner/AdventOfCode.Runner.csproj
@@ -27,6 +27,7 @@
     <ProjectReference Include="..\AdventOfCode.Solutions\AdventOfCode.Day19\AdventOfCode.Day19.fsproj" />
     <ProjectReference Include="..\AdventOfCode.Solutions\AdventOfCode.Day20\AdventOfCode.Day20.fsproj" />
     <ProjectReference Include="..\AdventOfCode.Solutions\AdventOfCode.Day21\AdventOfCode.Day21.fsproj" />
+    <ProjectReference Include="..\AdventOfCode.Solutions\AdventOfCode.Day22\AdventOfCode.Day22.fsproj" />
   </ItemGroup>
 
   <ItemGroup>
@@ -96,6 +97,9 @@
     <None Update="App_Data\day21.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+	<None Update="App_Data\day22.txt">
+		<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	</None>
   </ItemGroup>
 
 </Project>
