--- a/AdventOfCode.Runner/AdventOfCode.Runner.csproj
+++ b/AdventOfCode.Runner/AdventOfCode.Runner.csproj
@@ -28,6 +28,7 @@
     <ProjectReference Include="..\AdventOfCode.Solutions\AdventOfCode.Day20\AdventOfCode.Day20.fsproj" />
     <ProjectReference Include="..\AdventOfCode.Solutions\AdventOfCode.Day21\AdventOfCode.Day21.fsproj" />
     <ProjectReference Include="..\AdventOfCode.Solutions\AdventOfCode.Day22\AdventOfCode.Day22.fsproj" />
+    <ProjectReference Include="..\AdventOfCode.Solutions\AdventOfCode.Day23\AdventOfCode.Day23.fsproj" />
     <ProjectReference Include="..\AdventOfCode.Solutions\AdventOfCode.Day24\AdventOfCode.Day24.fsproj" />
     <ProjectReference Include="..\AdventOfCode.Solutions\AdventOfCode.Day25\AdventOfCode.Day25.fsproj" />
   </ItemGroup>
@@ -102,6 +103,9 @@
 	  <None Update="App_Data\day22.txt">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </None>
+    <None Update="App_Data\day23.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="App_Data\day24.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
